--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-       
-        <title>fitness </title>
+        <%- include('./partials/head'); %>
+        <title>GymGuide360</title>
     </head>
 <body>
     <nav>
@@ -14,7 +10,8 @@
     </nav>
 
     <header style="text-align: center;margin: 30px;">
-        <h1>let's workout now 🏋️‍♂️ </h1>
+        <h1>GymGuide360</h1>
+        <h2>let's workout now 🏋️‍♂️ </h2>
     </header>
    
   <div class="cont" style="text-align: center;">
